# django-custom-user

./: README.md  db.sqlite3  pyproject.toml
custom_user/: settings.py  urls.py
templates/: base.html
users/: models.py  tests.py  views.py
users/migrations/: 0001_initial.py
